# osmo-desktop

./: .gitignore  README.en.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-07-16T22-19-39-298Z.yml  page-2026-07-16T22-20-06-430Z.yml  page-2026-07-16T22-20-58-115Z.yml  page-2026-07-16T22-21-41-788Z.yml  page-2026-07-16T22-21-52-134Z.yml  page-2026-07-16T22-22-10-899Z.yml  page-2026-07-16T22-24-01-531Z.yml  page-2026-07-16T22-24-31-488Z.yml  page-2026-07-16T22-24-41-521Z.yml  page-2026-07-16T22-24-55-439Z.yml  page-2026-07-16T22-27-49-007Z.yml  page-2026-07-16T22-44-18-739Z.yml  page-2026-07-16T22-45-09-711Z.yml  page-2026-07-16T22-49-34-232Z.yml  page-2026-07-16T22-49-52-381Z.yml  page-2026-07-16T22-53-47-677Z.yml  page-2026-07-16T22-54-16-546Z.yml  page-2026-07-16T22-54-53-590Z.yml  page-2026-07-16T22-55-19-359Z.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: device.rs  export.rs  import.rs  lib.rs  main.rs  rtmp.rs  scan.rs
apps/web/: package.json  tsconfig.json  vite.config.ts
docs/: baselines.md  m2-export-design.md
samples/fake-dcim/DCIM/DJI_001/: DJI_20260701143022_0042_D.LRF
tooling/scripts/: gen-export-job.ts  gen-samples.sh
tooling/tsconfig/: tsconfig.base.json
tooling/vite/: probeSink.ts
