[package]
name = "osmo-desktop"
version = "0.1.0"
description = "Desktop companion for DJI Pocket cameras: import, grade, export"
authors = ["zzw4257"]
edition = "2021"

[lib]
name = "osmo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
