[package]
name = "osmo-desktop"
version = "0.1.0"
description = "Desktop companion for DJI Pocket cameras: import, grade, export"
authors = ["zzw4257"]
edition = "2021"
default-run = "osmo-desktop"

[lib]
name = "osmo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "export-cli"
path = "src/bin/export_cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = "30"
pollster = "1"
base64 = "0.22"

[[bin]]
name = "rtmp-relay-cli"
path = "src/bin/rtmp_relay_cli.rs"
